--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.unity.render-pipelines.universal",
-  "description": "The Universal Render Pipeline (URP) is a prebuilt Scriptable Render Pipeline, made by Unity. URP provides artist-friendly workflows that let you quickly and easily create optimized graphics across a range of platforms, from mobile to high-end consoles and PCs.",
+  "description": "A fork of Unity's 'Universal Render Pipeline' to add various QoL features and specific improvments suited for LVR",
   "version": "12.1.6",
   "unity": "2021.2",
-  "displayName": "Universal RP",
+  "displayName": "LVR RP",
   "dependencies": {
     "com.unity.mathematics": "1.2.1",
     "com.unity.burst": "1.5.0",
