--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.unity.render-pipelines.universal",
-  "description": "A fork of Unity's 'Universal Render Pipeline' to add various QoL features and specific improvments suited for LVR",
+  "description": "A fork of Unity's 'Universal Render Pipeline' to add various QoL features and specific improvments suited primarily for LVR",
   "version": "12.1.6",
   "unity": "2021.2",
-  "displayName": "LVR Universal RP",
+  "displayName": "Lucent RP",
   "dependencies": {
     "com.unity.mathematics": "1.2.1",
     "com.unity.burst": "1.5.0",
