--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.render-pipelines.universal",
   "description": "A fork of Unity's 'Universal Render Pipeline' to add various new features and specific improvements!",
-  "version": "12.1.6",
+  "version": "12.1.6-1",
   "unity": "2021.2",
   "displayName": "Prisma RP",
   "dependencies": {
