--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A fork of Unity's 'Universal Render Pipeline' to add various new features and specific improvements!",
   "version": "12.1.6",
   "unity": "2021.2",
-  "displayName": "Prisma RP",
+  "displayName": "Prisma URP",
   "dependencies": {
     "com.unity.mathematics": "1.2.1",
     "com.unity.burst": "1.5.0",
